# hashdb-ida

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  LICENSE  README.md  hashdb.py  ida-plugin.json  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: release.yml  run_tests.yaml
src/: hashdb-plugin.py  main.cpp
src/hash-algorihtms/: crc32.hpp  fnv1a_64.hpp  revil_010F.hpp
src/hashdb/: config.py  core.py  exceptions.py
src/hashdb/ida/actions/: action.py  actions.py  handler.py  hunt_hash_algorithm.py  lookup_hash.py  scan_hashes.py  separator.py
src/hashdb/ida/hooks/: hexrays.py  ui.py
src/hashdb/ida/ui/: icons.py
src/hashdb/python/: reload.py
src/hashdb/requests/: algorithms.py  hunt.py  module.py  strings.py
src/hashdb/settings/: config.py  plugin.py
src/hashdb/types/: algorithm.py  enum_value.py  hash.py  hit.py  settings.py
src/hashdb/utilities/: hexrays.py  ida.py  logging.py  reload.py  requests.py  threads.py  versions.py
src/utilities/: strings.hpp
tests/: __init__.py  conftest.py  test_ida_helpers.py  test_parsing.py  test_requests.py  test_threads.py
