[metadata]
name = hashdb-ida
description = HashDB plugin for IDA Pro
platforms = linux, win32
classifiers =
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9
    Programming Language :: Python 3.10

[options]
packages =
    hashdb
install_requires =
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
hashdb = py.typed
